# pyproject.toml

[build-system]
requires = ["setuptools>=66.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bannotator"
version = "1.0.2"
description = "Anntotate episodic events of videos"
readme = "README.md"
authors = [{name = "Xingjian Zhang", email = "hsingchien.zhang@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["video", "annotate", "gui"]
dependencies = [
    "numpy >= 1.23.0",
    "scipy >= 1.10",
    "opencv-python >= 4.7.0",
    "pyside6 >= 6.4.2",
    "distinctipy >= 1.2.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "scikit-learn"]

[project.urls]
Homepage = "https://github.com/hsingchien/Bannotator"

[project.scripts]
annotate-behavior = "bannotator.app:main"
[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/bannotator/__init__.py" = ["{version}"]